--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,10 @@
 name: Build and Push Docker image
 
 on:
-  push:
-    branches: [master]
+  workflow_run:
+    workflows: ["Auto Tag on Push"] # Must match the name of the first workflow
+    types:
+      - completed # Runs when the first workflow finishes
 
 jobs:
   build:
