--- a/.github/workflows/auto-tag-on-push.yml
+++ b/.github/workflows/auto-tag-on-push.yml
@@ -15,23 +15,27 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0 # important to fetch all tags and history
 
-      - name: Set up date variables
+      - name: Set up date tags
         id: date
         run: |
           DATE_TAG=$(date -u +"%y.%m.%d")
           echo "DATE_TAG=$DATE_TAG" >> $GITHUB_ENV
 
-      - name: Create or move tags
+      - name: Create tags
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # Tag with current date format (YY.MM.DD)
+          # Tag with current date
           git tag -f "$DATE_TAG"
 
-          # Update 'latest' tag to this commit
+          # Tag 'latest' pointing to current commit
           git tag -f latest
 
-          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}
-
-          git push origin --tags --force
+      - name: Push tags to GitHub
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git
+          git push origin "$DATE_TAG" --force
+          git push origin latest --force
