--- a/.github/workflows/auto-tag-on-push.yml
+++ b/.github/workflows/auto-tag-on-push.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 0 # important to fetch all tags and history
 
       - name: Set up date tags
